Bug Fix: ChromeOS Screen Name Mismatch

We fixed a bug that after changing the primary display, the desktop share
picker will mismatch the screen preview with screen name.

In this CL we fixed the bug.

BUG=680335

Review-Url: https://codereview.chromium.org/2627933003
Cr-Commit-Position: refs/heads/master@{#443434}

Former-commit-id: 1a5d0781a13fd862a763869bf8852426566d879c